maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: unclosed character literal
    if (getIndication(x,y) == '9999') {
                              ^ShortestPathMaze:6: error: unclosed character literal
    if (getIndication(x,y) == '9999') {
                                   ^ShortestPathMaze:6: error: ')' expected but something found.
    if (getIndication(x,y) == '9999') {
                              ^